# docs/swagger.json
@@ -28,6 +28,15 @@
                     "Domain"
                 ],
                 "summary": "List domains",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Tenant UUID to set access control",
+                        "name": "Tenant",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -101,6 +110,13 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "description": "Tenant UUID to set access control",
+                        "name": "Tenant",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
                         "description": "Target domain's UUID",
                         "name": "domain_uuid",
                         "in": "path",
@@ -143,6 +159,13 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "description": "Tenant UUID to set access control",
+                        "name": "Tenant",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
                         "description": "Target domain's UUID",
                         "name": "domain_uuid",
                         "in": "path",
@@ -152,6 +175,67 @@
                 "responses": {
                     "204": {
                         "description": ""
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.HTTPError"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.HTTPError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.HTTPError"
+                        }
+                    }
+                }
+            },
+            "patch": {
+                "description": "Update domain info",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Domain"
+                ],
+                "summary": "Update domain",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Tenant UUID to set access control",
+                        "name": "Tenant",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Target domain's UUID",
+                        "name": "domain_uuid",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Request body parameter with json format",
+                        "name": "domain",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/controllers.DomainUpdateRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.DomainInfoResult"
+                        }
                     },
                     "400": {
                         "description": "Bad Request",
@@ -185,6 +269,13 @@
                 ],
                 "summary": "List hosts",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Tenant UUID to set access control",
+                        "name": "Tenant",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "type": "string",
                         "description": "Target domain's UUID",
@@ -233,6 +324,13 @@
                 ],
                 "summary": "Add new host",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Tenant UUID to set access control",
+                        "name": "Tenant",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "type": "string",
                         "description": "Target domain's UUID",
@@ -292,6 +390,13 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "description": "Tenant UUID to set access control",
+                        "name": "Tenant",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
                         "description": "Target domain's UUID",
                         "name": "domain_uuid",
                         "in": "path",
@@ -348,6 +453,13 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "description": "Tenant UUID to set access control",
+                        "name": "Tenant",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
                         "description": "Target domain's UUID",
                         "name": "domain_uuid",
                         "in": "path",
@@ -389,6 +501,13 @@
                 ],
                 "summary": "Delete host",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Tenant UUID to set access control",
+                        "name": "Tenant",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "type": "string",
                         "description": "Target domain's UUID",
@@ -440,6 +559,12 @@
                         "$ref": "#/definitions/controllers.HostResult"
                     }
                 },
+                "tenants": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
                 "uuid": {
                     "type": "string"
                 }
@@ -461,6 +586,12 @@
             "properties": {
                 "domain": {
                     "type": "string"
+                },
+                "tenants": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 }
             }
         },
@@ -470,8 +601,25 @@
                 "domain": {
                     "type": "string"
                 },
+                "tenants": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
                 "uuid": {
                     "type": "string"
+                }
+            }
+        },
+        "controllers.DomainUpdateRequest": {
+            "type": "object",
+            "properties": {
+                "tenants": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 }
             }
         },
