# pkg/interface/controllers/domain_controller.go
@@ -1,6 +1,7 @@
 package controllers
 
 import (
+	"errors"
 	"log"
 	"net/http"
 
@@ -10,7 +11,12 @@ import (
 
 // Request
 type DomainRequest struct {
-	Name string `json:"domain"`
+	Name    string   `json:"domain"`
+	Tenants []string `json:"tenants"`
+}
+
+type DomainUpdateRequest struct {
+	Tenants []string `json:"tenants"`
 }
 
 // Result
@@ -20,8 +26,9 @@ type DomainInfoResult struct {
 }
 
 type DomainResult struct {
-	Domain string `json:"domain"`
-	Uuid   string `json:"uuid"`
+	Domain  string   `json:"domain"`
+	Uuid    string   `json:"uuid"`
+	Tenants []string `json:"tenants"`
 }
 
 type HostResult struct {
@@ -79,7 +86,15 @@ func (d *DomainController) Add(c Context) {
 	}
 
 	name := request.Name
-	newDomain, err := model.NewOriginalDomain(name)
+	tenantList := request.Tenants
+	if len(tenantList) == 0 {
+		NewError(c,
+			http.StatusBadRequest,
+			errors.New("accessible tenant uuid is not specified"))
+		return
+	}
+
+	newDomain, err := model.NewOriginalDomain(name, tenantList)
 	if err != nil {
 		switch e := err.(type) {
 		case *model.InvalidParameterGiven:
@@ -103,11 +118,17 @@ func (d *DomainController) Add(c Context) {
 		return
 	}
 
+	var tenants []string
+	for _, t := range newDomain.Tenants {
+		tenants = append(tenants, t.String())
+	}
+
 	hosts := make([]HostResult, 0)
 	var result DomainInfoResult
 	result.Domain = newDomain.Name.String()
 	result.Uuid = newDomain.Uuid.String()
 	result.Hosts = hosts
+	result.Tenants = tenants
 	c.JSON(http.StatusCreated, result)
 }
 
@@ -116,11 +137,26 @@ func (d *DomainController) Add(c Context) {
 // @Summary List domains
 // @Description List domains from coredns
 // @Produce json
+// @Param Tenant header string true "Tenant UUID to set access control"
 // @Success 200 {object} DomainListResult
 // @Failure 500 {object} HTTPError
 // @Router /v1/domains [get]
 func (d *DomainController) List(c Context) {
-	domainList, err := d.interactor.GetDomainsList()
+	requestTenant := c.GetHeader("Tenant")
+	if requestTenant == "" {
+		NewError(c,
+			http.StatusBadRequest,
+			errors.New("tenant uuid header is not specified"))
+		return
+	}
+
+	requestTenantUuid, err := model.NewUuid(requestTenant)
+	if err != nil {
+		NewError(c, http.StatusBadRequest, err)
+		return
+	}
+
+	domainList, err := d.interactor.GetDomainsList(requestTenantUuid)
 	if err != nil {
 		NewError(c,
 			http.StatusInternalServerError,
@@ -131,7 +167,12 @@ func (d *DomainController) List(c Context) {
 
 	domList := make([]DomainResult, 0)
 	for _, dom := range domainList {
-		domRes := DomainResult{Domain: dom.Name.String(), Uuid: dom.Uuid.String()}
+		var tenants []string
+		for _, t := range dom.Tenants {
+			tenants = append(tenants, t.String())
+		}
+
+		domRes := DomainResult{Domain: dom.Name.String(), Uuid: dom.Uuid.String(), Tenants: tenants}
 		domList = append(domList, domRes)
 	}
 
@@ -139,18 +180,33 @@ func (d *DomainController) List(c Context) {
 	c.JSON(http.StatusOK, result)
 }
 
-// Get handler doc
+// Update handler doc
 // @Tags Domain
-// @Summary Get domain
-// @Description Get domain from coredns
+// @Summary Update domain
+// @Description Update domain info
 // @Produce json
+// @Param Tenant header string true "Tenant UUID to set access control"
 // @Param domain_uuid path string true "Target domain's UUID"
+// @Param domain body DomainUpdateRequest true "Request body parameter with json format"
 // @Success 200 {object} DomainInfoResult
 // @Failure 400 {object} HTTPError
 // @Failure 404 {object} HTTPError
 // @Failure 500 {object} HTTPError
-// @Router /v1/domains/{domain_uuid} [get]
-func (d *DomainController) Get(c Context) {
+// @Router /v1/domains/{domain_uuid} [patch]
+func (d *DomainController) Update(c Context) {
+	requestTenant := c.GetHeader("Tenant")
+	if requestTenant == "" {
+		NewError(c,
+			http.StatusBadRequest,
+			errors.New("tenant uuid header is not specified"))
+		return
+	}
+
+	requestTenantUuid, err := model.NewUuid(requestTenant)
+	if err != nil {
+		NewError(c, http.StatusBadRequest, err)
+		return
+	}
 	domainUuid := c.Param("domain_uuid")
 	targetDomainUuid, err := model.NewUuid(domainUuid)
 	if err != nil {
@@ -159,10 +215,111 @@ func (d *DomainController) Get(c Context) {
 		return
 	}
 
-	gotDomain, err := d.interactor.Get(targetDomainUuid)
+	var request DomainUpdateRequest
+	err = c.ShouldBindJSON(&request)
+	if err != nil {
+		NewError(c,
+			http.StatusInternalServerError,
+			NewUnAvailableHandlingError())
+		log.Print(err)
+		return
+	}
+	tenantList := request.Tenants
+	if len(tenantList) == 0 {
+		NewError(c, http.StatusBadRequest,
+			errors.New("empty body parameter is given"))
+	}
+
+	var tenantUuidList []model.Uuid
+	for _, t := range tenantList {
+		tUuid, err := model.NewUuid(t)
+		if err != nil {
+			NewError(c, http.StatusBadRequest,
+				errors.New("empty body parameter is given"))
+		}
+		tenantUuidList = append(tenantUuidList, tUuid)
+	}
+
+	domain, err := d.interactor.Update(targetDomainUuid, requestTenantUuid, tenantUuidList)
 	if err != nil {
 		switch e := err.(type) {
-		case *model.InvalidParameterGiven:
+		case *model.InvalidParameterGiven, *model.DomainPermissionError:
+			NewError(c, http.StatusBadRequest, err)
+		case *model.DomainNotFoundError:
+			NewError(c, http.StatusNotFound, err)
+		default:
+			NewError(c,
+				http.StatusInternalServerError,
+				NewUnAvailableHandlingError())
+			log.Print(e)
+		}
+		log.Print(err)
+		return
+	}
+
+	hosts := make([]HostResult, 0)
+	for _, h := range domain.Hosts {
+		host := HostResult{Name: h.Name, Address: h.Address, Uuid: h.Uuid.String()}
+		hosts = append(hosts, host)
+	}
+
+	tenants := make([]string, 0)
+	for _, t := range domain.Tenants {
+		tenants = append(tenants, t.String())
+	}
+
+	var result DomainInfoResult
+	result.Domain = domain.Name.String()
+	result.Uuid = domain.Uuid.String()
+	result.Tenants = tenants
+	result.Hosts = hosts
+	c.JSON(http.StatusOK, result)
+}
+
+// Get handler doc
+// @Tags Domain
+// @Summary Get domain
+// @Description Get domain from coredns
+// @Produce json
+// @Param Tenant header string true "Tenant UUID to set access control"
+// @Param domain_uuid path string true "Target domain's UUID"
+// @Success 200 {object} DomainInfoResult
+// @Failure 400 {object} HTTPError
+// @Failure 404 {object} HTTPError
+// @Failure 500 {object} HTTPError
+// @Router /v1/domains/{domain_uuid} [get]
+func (d *DomainController) Get(c Context) {
+	requestTenant := c.GetHeader("Tenant")
+	if requestTenant == "" {
+		NewError(c,
+			http.StatusBadRequest,
+			errors.New("tenant uuid header is not specified"))
+		return
+	}
+
+	if requestTenant == "" {
+		NewError(c,
+			http.StatusBadRequest,
+			errors.New("tenant uuid header is not specified"))
+		return
+	}
+	requestTenantUuid, err := model.NewUuid(requestTenant)
+	if err != nil {
+		NewError(c, http.StatusBadRequest, err)
+		return
+	}
+	domainUuid := c.Param("domain_uuid")
+	targetDomainUuid, err := model.NewUuid(domainUuid)
+	if err != nil {
+		NewError(c, http.StatusBadRequest, err)
+		log.Print(err)
+		return
+	}
+
+	gotDomain, err := d.interactor.Get(targetDomainUuid, requestTenantUuid)
+	if err != nil {
+		switch e := err.(type) {
+		case *model.InvalidParameterGiven, *model.DomainPermissionError:
 			NewError(c, http.StatusBadRequest, err)
 		case *model.DomainNotFoundError:
 			NewError(c, http.StatusNotFound, err)
@@ -182,9 +339,15 @@ func (d *DomainController) Get(c Context) {
 		hosts = append(hosts, host)
 	}
 
+	tenants := make([]string, 0)
+	for _, t := range gotDomain.Tenants {
+		tenants = append(tenants, t.String())
+	}
+
 	var result DomainInfoResult
 	result.Domain = gotDomain.Name.String()
 	result.Uuid = gotDomain.Uuid.String()
+	result.Tenants = tenants
 	result.Hosts = hosts
 	c.JSON(http.StatusOK, result)
 }
@@ -193,6 +356,7 @@ func (d *DomainController) Get(c Context) {
 // @Tags Domain
 // @Summary Delete domain
 // @Description Delete new domain to coredns
+// @Param Tenant header string true "Tenant UUID to set access control"
 // @Param domain_uuid path string true "Target domain's UUID"
 // @Success 204
 // @Failure 400 {object} HTTPError
@@ -200,6 +364,19 @@ func (d *DomainController) Get(c Context) {
 // @Failure 500 {object} HTTPError
 // @Router /v1/domains/{domain_uuid} [delete]
 func (d *DomainController) Delete(c Context) {
+	requestTenant := c.GetHeader("Tenant")
+	if requestTenant == "" {
+		NewError(c,
+			http.StatusBadRequest,
+			errors.New("tenant uuid header is not specified"))
+		return
+	}
+
+	requestTenantUuid, err := model.NewUuid(requestTenant)
+	if err != nil {
+		NewError(c, http.StatusBadRequest, err)
+		return
+	}
 	domainUuid := c.Param("domain_uuid")
 	targetDomainUuid, err := model.NewUuid(domainUuid)
 	if err != nil {
@@ -208,10 +385,10 @@ func (d *DomainController) Delete(c Context) {
 		return
 	}
 
-	err = d.interactor.Delete(targetDomainUuid)
+	err = d.interactor.Delete(targetDomainUuid, requestTenantUuid)
 	if err != nil {
 		switch e := err.(type) {
-		case *model.InvalidParameterGiven:
+		case *model.InvalidParameterGiven, *model.DomainPermissionError:
 			NewError(c, http.StatusBadRequest, err)
 		case *model.DomainNotFoundError:
 			NewError(c, http.StatusNotFound, err)
